<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">callback</string>
    <string name="on_create">onCreate</string>
    <string name="on_start">onStart</string>
    <string name="on_resume">onResume</string>
    <string name="on_pause">onPause</string>
    <string name="on_stop">onStop</string>
    <string name="on_destroy">onDestroy</string>
    <string name="nextButton">Next</string>
</resources>
